force-app/main/default/objects/leaseworks__Deal_Wizard_Configuration__mdt/leaseworks__Deal_Wizard_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Deal Wizard Configuration</label>
    <pluralLabel>Deal Wizard Configurations</pluralLabel>
</CustomObject>