force-app/main/default/objects/leaseworks__Deal_Wizard_Configuration__mdt/fields/leaseworks__Dependent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Dependent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dependent?</label>
    <type>Checkbox</type>
</CustomField>