force-app/main/default/objects/leaseworks__Deal_Wizard_Configuration__mdt/fields/leaseworks__Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Filter_Criteria__c</fullName>
    <label>Filter Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>