force-app/main/default/objects/leaseworks__Deal_Wizard_Configuration__mdt/fields/leaseworks__Parent_Object_API__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Parent_Object_API__c</fullName>
    <label>Parent Object API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>